crates/cli/tests/snapshots/deprecated__lint_37da396188e345dbca902d84176af1a0362ba0e50ffc70133ff8b08141960505.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"mkAliasOptionModuleMD old new\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ mkAliasOptionModuleMD old new
   │ ──────────┬──────────  
   │           ╰──────────── mkAliasOptionModuleMD is deprecated, use mkAliasOptionModule instead
───╯
