crates/cli/tests/snapshots/deprecated__lint_43eaba26445deeb39487f4c9485ea0e19acb5221335866624a98839589d8de8b.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.system\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.system
   │ ─────┬─────  
   │      ╰─────── pkgs.system is deprecated, use pkgs.stdenv.hostPlatform.system instead
───╯
