crates/cli/tests/snapshots/deprecated__lint_4ad28e2610d2aecf06f3f7ded4bbe61c7cb94bf01d2fd066ba65157b55964386.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"toPath (if cond then \\\"/abs\\\" else \\\"rel\\\")\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ toPath (if cond then "/abs" else "rel")
   │ ───────────────────┬───────────────────  
   │                    ╰───────────────────── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
