crates/cli/tests/snapshots/deprecated__lint_718da0ec8c3bbc8472e76289d6e2c9b36bb61bcb0c651b7d990f5add15726cac.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.lists.fold f z xs\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.lists.fold f z xs
   │ ───────┬──────  
   │        ╰──────── lib.lists.fold is deprecated, use lib.lists.foldr instead
───╯
