crates/cli/tests/snapshots/deprecated__lint_82a443e38ff0216f9c3149c5fbcec7859e9f5f0ca3cf78e6b518716157aced3a.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.mkFixStrictness (if cond then a else b)\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.mkFixStrictness (if cond then a else b)
   │ ─────────────────────┬─────────────────────  
   │                      ╰─────────────────────── lib.mkFixStrictness has no effect and can be removed
───╯
