crates/cli/tests/snapshots/deprecated__lint_9f17eb31877325b73b6b29e84ef242b4fe2e21a0ba18285833e1d05efe037b1a.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.hostPlatform\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.hostPlatform
   │ ────────┬────────  
   │         ╰────────── pkgs.hostPlatform is deprecated, use pkgs.stdenv.hostPlatform instead
───╯
