crates/cli/tests/snapshots/deprecated__lint_ac5be64b456b93d615ca517e5af4637e747eeb08acabf1c5a6230b182643e363.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.forceSystem\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.forceSystem
   │ ────────┬───────  
   │         ╰───────── pkgs.forceSystem is deprecated; import nixpkgs explicitly instead
───╯
