crates/cli/tests/snapshots/deprecated__lint_aded4062a370627b05abe2aefc5ee40156adbc9936ef29b2208d11b58972f3d1.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.mkFixStrictness x\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.mkFixStrictness x
   │ ──────────┬──────────  
   │           ╰──────────── lib.mkFixStrictness has no effect and can be removed
───╯
