crates/cli/tests/snapshots/deprecated__lint_ae4d25c72a2d9b3d9e262fe572786eab32930dae755b811045fbac2eed1c4109.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.cli.toGNUCommandLineShell opts attrs\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.cli.toGNUCommandLineShell opts attrs
   │ ──────────────┬──────────────  
   │               ╰──────────────── lib.cli.toGNUCommandLineShell is deprecated, use lib.cli.toCommandLineShell instead
───╯
