crates/cli/tests/snapshots/deprecated__lint_b2566c736b6ebdeca17a2a1cd81b02dbe697d30bd882309abd6f52d6ac755c8b.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"mkAliasIfDef option\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ mkAliasIfDef option
   │ ─────────┬─────────  
   │          ╰─────────── mkAliasIfDef is deprecated, use mkIf option.isDefined instead
───╯
